# bayes_filters_rs

./: Cargo.toml
c_test/: CMakeLists.txt  a.out  main.c
c_test/include/: kalman_filter.h
src/: lib.rs  linear_kalman_filter.rs  linear_kalman_filter_c_bindings.rs
src/linear_kalman_filter/: linear_kalman_filter.rs
